# ds-algo

./: .gitignore  CMakeLists.txt  bit-manipulation.txt  cpp-template.cpp  in  out  test.cpp  tricks.txt
dynamic-programming/: matrix-chain.h
mo_algorithm/: cf-powerful-array.cpp  count3.cpp  spoj-dquery.cpp
segment_trees/: cf-component-tree.cpp  spoj-kquery.cpp  spoj-kqueryo.cc  spoj-mkthnum.cpp  spoj-posters-2.cpp  spoj-posters.cpp
square_root_decomposition/: gfg-sdc-implementation.cpp
