cmake_minimum_required(VERSION 3.9)
project(ds_algo)

set(CMAKE_CXX_STANDARD 14)

add_executable(ds_algo
#        dynamic_programming/dp-main.cc)
#        segment_trees/gss1-spoj.cc)
#        segment_trees/spoj-frequent.cc)
#        segment_trees/cf-sereja-brackets.cpp)
#        segment_trees/spoj-kquery.cpp)
#        segment_trees/spoj-posters.cpp)
#        segment_trees/cc-prmq.cpp)
#        segment_trees/cf-component-tree.cpp)
#        builtins.cpp cpp-template.cpp)
#        segment_trees/spoj-kqueryo.cc)
#        segment_trees/spoj-templeq.cpp)
#        fenwick_trees/spoj-fentree.cpp)
#        segment_trees/spoj-mkthnum.cpp
        segment_trees/spoj-mkthnum-2.cpp)
#        segment_trees/spoj-posters-2.cpp)
